# session-manager

./: Cargo.toml  README.md  build.rs  docker-compose.dev.yaml
deploy/dev/: Dockerfile_app  Dockerfile_cluster_initiator  entrypoint.sh  redis.conf
proto/: connection_state.proto  session.proto
src/: cli.rs  main.rs  multiplex_service.rs
src/api/: connection_state.rs  k8s.rs  mod.rs  session.rs
src/core/: error.rs  mod.rs  models.rs  redis.rs
