[package]
name = "session-manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
deadpool-redis = { version = "0.14.0", features = ["rt_tokio_1", "cluster"] }
derive_more = "0.99.17"
env_logger = "0.10.0"
futures = "0.3.28"
hyper = { version = "0.14.27", features = ["full"] }
structopt = "0.3.26"
structopt-derive = "0.4.18"
log = "0.4.20"
prost = "0.12.1"
redis = { version = "0.24.0", features = [ "cluster-async", "tokio-comp" ] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
tonic = "0.10.0"
tonic-reflection = "0.10.0"
tonic-types = "0.10.1"
tokio = { version = "1.32.0", features = ["rt-multi-thread", "macros" ] }
tower = { version = "0.4.13", features = ["full"] }
[build-dependencies]
tonic-build = { version = "0.10.1", features = ["prost"] }